src/objects/OpenAPI__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Impostazioni per chiamata al servizio di verifica PIVA</description>
    <fields>
        <fullName>ApiKey__c</fullName>
        <label>ApiKey</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EndPointCheckIVA__c</fullName>
        <label>EndPointCheckIVA</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EndPointPR__c</fullName>
        <label>EndPointPR</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EndPointToken__c</fullName>
        <label>EndPointToken</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Scopes_Company__c</fullName>
        <label>Scopes Company</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Scopes_PR__c</fullName>
        <label>Scopes PR</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Utente__c</fullName>
        <label>Utente</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>OpenAPI</label>
</CustomObject>